Added changes for refresh token , angular store and dashboard bug fix

--- a/myapp-customerwebapp-azure.client/src/app/app.component.html
+++ b/myapp-customerwebapp-azure.client/src/app/app.component.html
@@ -1,4 +1,4 @@
-﻿<header class="text-white p-3" style="background-color: #343a40;">
+<header class="text-white p-3" style="background-color: #343a40;">
   <div class="container-fluid d-flex align-items-center">
     <img src="assets/images/logo.png" alt="Logo" class="me-3 logo" style="height: 40px;">
   </div>
@@ -8,3 +8,5 @@
 <main class="container-fluid">
   <router-outlet></router-outlet>
 </main>
+
+<button class="btn btn-primary"> Test</button>
