--- a/myapp-customerwebapp-azure.client/src/app/login/login.component.html
+++ b/myapp-customerwebapp-azure.client/src/app/login/login.component.html
@@ -1,55 +1,50 @@
-<section class="vh-100">
-    <div class="container-fluid h-100">
-        <div class="alert alert-danger" role="alert" *ngIf="isloginFailed">
-            Invalid credentials!
-        </div>
-        <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col-md-9 col-lg-6 col-xl-5">
-                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp"
-                    class="img-fluid" alt="Sample image">
-            </div>
-            <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-                <form [formGroup]="loginForm">
-                    <div class="mb-3">
-                        <label for="email" class="form-label">Email address</label>
-                        <input type="email" id="email" class="form-control form-control-lg" formControlName="email"
-                            placeholder="Enter email" />
-                    </div>
-
-                    <div class="mb-3">
-                        <label for="password" class="form-label">Password</label>
-                        <input type="password" id="password" class="form-control form-control-lg"
-                            formControlName="password" placeholder="Password" />
-                    </div>
-
-                    <div class="d-flex justify-content-between align-items-center mb-3">
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" id="rememberMe" />
-                            <label class="form-check-label" for="rememberMe">Remember me</label>
-                        </div>
-                        <a href="#" class="text-body">Forgot password?</a>
-                    </div>
-
-                    <div class="text-center text-lg-start mt-4 pt-2">
-                        <button type="button" class="btn btn-primary btn-lg px-5" (click)="login()">Login</button>
-                        <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="#"
-                                class="link-danger">Register</a></p>
-                    </div>
-                </form>
-            </div>
-        </div>
+<div class="login-container" style="margin-top: 50px;">
+  <div class="row">
+    <div class="col-md-8">
+      <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp" class="img-fluid"
+           alt="Sample image">
     </div>
+    <div class="col-md-4">
+      <form [formGroup]="loginForm" (ngSubmit)="login()">
+        <mat-card>
+          <mat-card-header>
+            <mat-card-title>Login</mat-card-title>
+          </mat-card-header>
+          <mat-card-content>
 
-    <div
-        class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-primary">
-        <div class="text-white mb-3 mb-md-0">
-            © 2024. All rights reserved.
-        </div>
-        <div>
-            <a href="#" class="text-white me-4"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="text-white me-4"><i class="fab fa-twitter"></i></a>
-            <a href="#" class="text-white me-4"><i class="fab fa-google"></i></a>
-            <a href="#" class="text-white"><i class="fab fa-linkedin-in"></i></a>
-        </div>
+            <mat-form-field appearance="fill" class="full-width" style="margin-bottom: 1rem;">
+              <mat-label>Email address</mat-label>
+              <input matInput formControlName="email" type="email" required autocomplete="email" />
+              <mat-error *ngIf="loginForm.get('email')?.hasError('required')">
+                Email is required
+              </mat-error>
+              <mat-error *ngIf="loginForm.get('email')?.hasError('email') && !loginForm.get('email')?.hasError('required')">
+                Please enter a valid email address
+              </mat-error>
+            </mat-form-field>
+
+            <mat-form-field appearance="fill" class="full-width" style="margin-bottom: 1.5rem;">
+              <mat-label>Password</mat-label>
+              <input matInput formControlName="password" type="password" required
+                     autocomplete="current-password" />
+              <mat-error *ngIf="loginForm.get('password')?.hasError('required')">
+                Password is required
+              </mat-error>
+            </mat-form-field>
+
+          </mat-card-content>
+          
+            <div fxLayout="row" fxLayoutGap="16px">
+              <button mat-button color="primary" type="submit" [disabled]="loginForm.invalid">
+                Login
+              </button>
+              <button mat-button color="primary" type="button" (click)="register()">
+                Register
+              </button>
+            </div>
+
+        </mat-card>
+      </form>
     </div>
-</section>
+  </div>
+</div>
