Updated sidebar component, configured store

--- a/myapp-customerwebapp-azure.client/src/app/app.component.html
+++ b/myapp-customerwebapp-azure.client/src/app/app.component.html
@@ -4,9 +4,10 @@
   </div>
 </header>
 
+<app-sidebar *ngIf="isLoggedIn$ | async"></app-sidebar>
+
 <!-- Main content below -->
 <main class="container-fluid">
   <router-outlet></router-outlet>
 </main>
 
-<button class="btn btn-primary"> Test</button>
