--- a/myapp-customerwebapp-azure.client/src/app/app.component.html
+++ b/myapp-customerwebapp-azure.client/src/app/app.component.html
@@ -3,11 +3,17 @@
     <img src="assets/images/logo.png" alt="Logo" class="me-3 logo" style="height: 40px;">
   </div>
 </header>
+<mat-sidenav-container class="sidenav-container" *ngIf="isLoggedIn$ | async">
+  
+  <mat-sidenav mode="side" opened>
+    <app-sidebar></app-sidebar>
+  </mat-sidenav>
 
-<app-sidebar *ngIf="isLoggedIn$ | async"></app-sidebar>
+  <mat-sidenav-content>
+    <main class="container-fluid">
+      <router-outlet></router-outlet>
+    </main>
+  </mat-sidenav-content>
 
-<!-- Main content below -->
-<main class="container-fluid">
-  <router-outlet></router-outlet>
-</main>
+</mat-sidenav-container>
 
