--- a/myapp-customerwebapp-azure.client/src/app/dashboard/dashboard.component.html
+++ b/myapp-customerwebapp-azure.client/src/app/dashboard/dashboard.component.html
@@ -1,53 +1,53 @@
-<div class="row">
+<div class="container-fluid">
+  <div class="row">
+    <main class="col-md-12 px-md-4 py-4">
+      <h2>Welcome to Customerly Dashboard</h2>
+      <p class="lead">Here’s a simple chart box below (placeholder).</p>
 
-
-    <!-- Main Content -->
-    <main class="col-md-10 ms-sm-auto px-md-4 py-4">
-        <h2>Welcome to Customerly Dashboard</h2>
-        <p class="lead">Here’s a simple chart box below (placeholder).</p>
-
-        <div class="row">
-            <div class="col-md-8 mb-4">
-                <div class="chart-box">
-                    <table class="table">
-                        <thead style="background-color: aliceblue !important;">
-                            <tr>
-                                <th>Customer Name</th>
-                                <th>Product</th>
-                                <th>Order</th>
-                                <th>Status</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr *ngFor="let customer of customers">
-                                <td>{{customer.name}}</td>
-                                <td>{{customer.product}}</td>
-                                <td>{{customer.order}}</td>
-                                <td>{{customer.status | booleanConverter}}</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card mb-3">
-                    <div class="card-body">
-                        <h5 class="card-title">Summary</h5>
-                        <p class="card-text">Some quick stats or updates.</p>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Notifications</h5>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">New user registered</li>
-                            <li class="list-group-item">Report ready to view</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+      <div class="row">
+        <div class="col-md-8 mb-4">
+          <div class="chart-box">
+            <table class="table">
+              <thead style="background-color: aliceblue !important;">
+                <tr>
+                  <th>Customer Name</th>
+                  <th>Product</th>
+                  <th>Order</th>
+                  <th>Status</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let customer of customers">
+                  <td>{{customer.name}}</td>
+                  <td>{{customer.product}}</td>
+                  <td>{{customer.order}}</td>
+                  <td>{{customer.status | booleanConverter}}</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
 
+        <div class="col-md-4">
+          <div class="card mb-3">
+            <div class="card-body">
+              <h5 class="card-title">Summary</h5>
+              <p class="card-text">Some quick stats or updates.</p>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Notifications</h5>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">New user registered</li>
+                <li class="list-group-item">Report ready to view</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </main>
+  </div>
 </div>
