--- a/myapp-customerwebapp-azure.client/src/app/shared/components/sidebar/sidebar.component.html
+++ b/myapp-customerwebapp-azure.client/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container class="sidenav-container">
-  <mat-sidenav mode="side" opened>
+  <mat-sidenav mode="side" [opened]="isLoggedIn$ | async">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item routerLink="/dashboard">Dashboard</a>
